Fix header spacing on Gravity PDF page

--- a/src/assets/scss/Component/_gf-settings-containers.scss
+++ b/src/assets/scss/Component/_gf-settings-containers.scss
@@ -33,6 +33,10 @@
       font-size: .875rem;
       margin-bottom: 0.25rem;
     }
+
+    .gform-settings-panel__header legend {
+      margin-bottom: 0;
+    }
   }
 
   .gform-settings-panel--collapsible {
